--- a/budget/pubspec.yaml
+++ b/budget/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  introduction_screen: ^3.0.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -64,8 +64,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/background.png
-   - assets/images/welcome.png
+   - assets/images/onboarding0.png
+   - assets/images/onboarding1.png
+   - assets/images/onboarding2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
