--- a/budget/pubspec.yaml
+++ b/budget/pubspec.yaml
@@ -44,6 +44,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   introduction_screen: ^3.0.2
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  #cupertino_icons: ^1.0.2
+  email_validator: ^2.0.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
